<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical" 
        android:padding="20dp"
        android:gravity="center"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:textSize="20sp" />
    <Button
        android:id="@+id/button_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
        android:text="@string/button_pic" />
     <Button
        android:id="@+id/button_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
        android:text="@string/button_label" />
      <Button
        android:id="@+id/button_buzzer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
        android:text="@string/button_buzzer" />
  <!--      <Button
        android:id="@+id/button_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
        android:text="@string/button_picture" /> -->
 <!--   <EditText
        android:id="@+id/edit_QRsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
         android:text="size"
        />
    <EditText
        android:id="@+id/edit_QRtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp"
         android:text="text"
        /> -->
</LinearLayout>

