<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- bluetooth端口信息 -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Text_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/Text_bt"
                    android:textSize="12sp" />
            </RelativeLayout>
            <!-- bt的name或者地址 -->

            <!-- bt的 -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <Spinner
                    android:id="@+id/spinner_btname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Text_btname"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/Text_btname"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/Text_btname"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <EditText
                    android:id="@+id/edit_btmax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Text_btmax"
                    android:ems="10"
                    android:focusable="false"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Text_btmax"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/edit_btmax"
                    android:layout_alignBottom="@+id/edit_btmax"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="@string/Text_btmax"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <Button
                    android:id="@+id/button_btcon"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_color_main_button"
                    android:text="@string/button_btcon"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>